Corrected some few alignments.

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ span {
 
 /* Why section starts */
 .why-section {
-  height: 100vh;
+  height: 90vh;
   background: var(--main-color);
   padding: 50px 50px;
   display: flex;
@@ -163,8 +163,11 @@ span {
   line-height: 1.5;
 }
 
-.text {
+.details p {
   margin-top: 30px;
+  font-size: 2rem;
+  font-family: var(--main-font);
+  font-weight: 300;
   font-size: 2rem;
 }
 
